# realistic-polygons

./: .gitignore  CMakeLists.txt  main.cpp
BA_vault/: CGAL.md  Characterizations Of Polygons.md  Notizen BA.md  Osmosis.md
BA_vault/.obsidian/: workspace.json
BA_vault/Notizen zu quellen/: 2-Opt_Moves_and_Flips_for_Area-optimal_Polygonizations.md  Characterizations of real world Polygons.md  Heuristics for the Generation of random Polygons.md
BA_vault/quellen/: Notes - Linear Time Algorithms For Visibility And Shortest Path Problems Inside Simple Polygons.md
BA_vault/quellen/minimum-link-path/: A Minimum Link Path Algorithm.md
parcio-typst/Praktikumsbericht/chapters/merge_closest_objects/: merge_closest_objects.typ
parcio-typst/bachelor-thesis/: legal.typ  main.typ  outline.typ
parcio-typst/bachelor-thesis/chapters/: background.typ  classifier.typ  fundamentals.typ  merge_convex_hulls.typ  union_of_convex_hulls.typ
parcio-typst/parcio-thesis/chapters/merge_convex_hulls/: merge_convex_hulls.typ
praktikumsbericht/: Praktikumsbericht.docx
sklearn/: Pipfile  TF_PolygonImageClassifier.py  TF_PolygonImagePrediction.py  onnxruntime_predict.py  requirements.txt  script.sh  sklearn_example.py  sklearn_to_onnx.py  tf_image_classification.py  train_on_polygons.py
sklearn/polygon_image_classifier/: fingerprint.pb  keras_metadata.pb  saved_model.pb
sklearn/polygon_image_classifier/variables/: variables.index
src/: AlgoGeoUtils.cpp  AlgoGeoUtils.h  BruteForceShortestPolygon.cpp  CommandLineArgumentHandler.h  DivideAndConquer.cpp  DivideAndConquer.h  GenerateShortestPolygon.cpp  GenerateSimplePolygon.cpp  MergeClosestObjectsAlgorithm.cpp  MergeClosestPolygonalChainsAlgorithm.cpp  MergeConvexHulls.cpp  RandomPointGenerator.cpp  RandomPointGenerator.h  TwoOptMoves.cpp  TwoOptMoves.h  TwoOptMovesTest.cpp  UnionOfConvexHulls.cpp  test.cpp  testData.txt  unionedHullsGenerator.cpp  unrealisticpolygons.cpp
src/InputOutput/: PolygonCsvWriter.cpp  PolygonCsvWriter.h  PolygonImageSaver.cpp  PolygonImageSaver.h  WrittenPolygonLoader.cpp
src/LeftMostRightMostVertices/: LeftMostRightMostVertices.cpp  QuadrantTree.cpp  QuadrantTree.h
src/PolygonGenerator/: BruteForceShortestPolygon.cpp  BruteForceShortestPolygon.h  CgalPolygonGenerator.cpp  CgalPolygonGenerator.h  GenerateSimplePolygon.cpp  GenerateSimplePolygon.h  GeoJsonParser.cpp  MergeClosestObjectsAlgorithm.cpp  MergeClosestPolygonalChainsAlgorithm.cpp  MergeConvexHulls.cpp  MergeConvexHulls.h  PolygonGenerator.cpp  PolygonMapping.cpp  PolygonMapping.h  UnionOfConvexHulls.cpp  UnionOfConvexHullsGenerator.cpp  UnionOfConvexHullsGenerator.h  WrittenPolygonLoader.cpp  WrittenPolygonLoader.h  unionedHullsGenerator.cpp  unrealisticpolygons.cpp
src/UnrealisticPolygonGenerator/: unrealisticpolygons.cpp
src/geojson/: GeoJsonParser.cpp  GeoJsonParser.h  GeoJsonPolygon.cpp  GeoJsonPolygon.h  GeojsonPolygonTransformer.cpp  GeojsonPolygonTransformer.h  PolygonCsvWriter.cpp  PolygonCsvWriter.h  geojson.cpp  geojson.h
src/main_files/: LoadPolygonPredictions.cpp  drawUnionOfConvexHulls.cpp  geojson.cpp  mergeConvexHulls.cpp  savePolygonImages.cpp  shortestPolygon.cpp  simplePolygon.cpp  unionOfConvexHulls.cpp  unionedHullsGenerator.cpp  unrealisticpolygons.cpp  writeUnionedHullsToFile.cpp
src/utils/: AlgoGeoUtils.cpp  AlgoGeoUtils.h  CommandLineArgumentHandler.cpp  CommandLineArgumentHandler.h  PolygonCsvWriter.cpp  PolygonCsvWriter.h  PolygonMapping.cpp  PolygonMapping.h  PolygonalChain.cpp  PolygonalChain.h  RandomPointGenerator.cpp  ToStringUtils.cpp  ToStringUtils.h  VectorUtils.cpp  VectorUtils.h
src/utils/PointGenerator/: RandomPointGenerator.cpp  RandomPointGenerator.h  RingDistributionPointGenerator.cpp  RingDistributionPointGenerator.h  SeededPointGenerator.cpp  SeededPointGenerator.h
src/utils/geometry/: AlgoGeoUtils.cpp  CgalTypes.h  MakeSimple.cpp  PointAndSegmentUtils.cpp  PointAndSegmentUtils.h  PointGenerator.h  PointUtils.cpp  PointUtils.h  PolygonNormalizer.cpp  PolygonNormalizer.h  PolygonUtils.cpp  PolygonUtils.h  PolygonalChain.cpp  PolygonalChain.h  SegmentUtils.cpp  SegmentUtils.h  VectorUtils.cpp  VectorUtils.h
